# xeus-clickhouse

./: .gitignore  .gitmodules  .travis.yml  .travis.yml.bak  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  environment.yml
dockerhub/: Dockerfile
examples/: clickhouse.ipynb
include/xeus-clickhouse/: xeus_clickhouse_config.hpp  xeus_clickhouse_interpreter.hpp
share/jupyter/kernels/xclickhouse/: kernel.json  kernel.json.in
src/: logger.h  main.cpp  xeus_clickhouse_interpreter.cpp
test/: CMakeLists.txt  test_db.cpp
